# ixplorir-driver

./: .gitignore  CMakeLists.txt  README.md
cmake/: toolchain-mingw.cmake
driver/: driver.c  driver.h  shared.h
installer/: CMakeLists.txt  main.c
